@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.7.9) unstable; urgency=low
   * http-client: poll socket after splice
   * http-server: handle EAGAIN after splice
   * http-server: send a 417 response on unrecognized "Expect" request
+  * response, widget-http: append filter id to resource tag
 
  --
 
